# FlagGems

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  README.md  README_cn.md  mkdocs.yml  pyproject.toml  setup.sh
.github/: backends.yaml
.github/workflows/: backend-test.yaml  blas-op-test.yaml  command.yaml  gems-cpp-extension.yaml  gems-test-on-hopper.yaml  gems-test-on-metax.yaml  mkdocs.yaml  model-test.yaml  op-test-quick-cpu.yaml  op-test.yaml  probe-node.yaml  python-coverage.yaml  reduction-op-test.yaml  special-op-test.yaml  triage.yaml  trigger.yml  unit-test.yaml  unittest.yaml
benchmark/: test_im2col.py  test_sigmoid.py
conf/: operators.yaml
container/: flaggems-nvidia-13.3
docs/: CHANGELOG.md  contribution.md  ctest_in_flaggems.md  features.md  getting-started.md  index.md  installation.md  operators.md
docs/benchmark/: ascend.json  hopper.json  hygon.json  iluvatar.json  metax.json  mthreads.json  thead.json
docs/coverage/20260310/: status.json
docs/coverage/20260311/: status.json
docs/coverage/20260312/: status.json
docs/coverage/20260314-manual/: class_index.html  function_index.html  index.html  status.json  z_029a114bb7d0be98___init___py.html  z_061df123ec123988___init___py.html  z_061df123ec123988_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0___init___py.html  z_0957b741f6c1fbf0_apply_repetition_penalties_py.html  z_0957b741f6c1fbf0_concat_and_cache_mla_py.html  z_0957b741f6c1fbf0_cross_entropy_loss_py.html  z_0957b741f6c1fbf0_cutlass_scaled_mm_py.html  z_0957b741f6c1fbf0_flash_mla_py.html  z_0957b741f6c1fbf0_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0_fused_moe_py.html  z_0957b741f6c1fbf0_geglu_py.html  z_0957b741f6c1fbf0_gelu_and_mul_py.html  z_0957b741f6c1fbf0_grouped_topk_py.html  z_0957b741f6c1fbf0_instance_norm_py.html  z_0957b741f6c1fbf0_moe_align_block_size_py.html  z_0957b741f6c1fbf0_moe_sum_py.html  z_0957b741f6c1fbf0_outer_py.html  z_0957b741f6c1fbf0_reglu_py.html  z_0957b741f6c1fbf0_reshape_and_cache_flash_py.html  z_0957b741f6c1fbf0_reshape_and_cache_py.html  z_0957b741f6c1fbf0_rotary_embedding_py.html  z_0957b741f6c1fbf0_rwkv_ka_fusion_py.html  z_0957b741f6c1fbf0_rwkv_mm_sparsity_py.html  z_0957b741f6c1fbf0_silu_and_mul_py.html  z_0957b741f6c1fbf0_skip_layernorm_py.html  z_0957b741f6c1fbf0_swiglu_py.html  z_0957b741f6c1fbf0_topk_softmax_py.html  z_0957b741f6c1fbf0_weight_norm_py.html  z_1013c810f26bf9e1___init___py.html  z_1121d7012b70ac4b___init___py.html  z_1121d7012b70ac4b_add_py.html  z_1121d7012b70ac4b_gelu_py.html  z_180569f6dcc1fe09___init___py.html  z_180569f6dcc1fe09_patch_util_py.html  z_180569f6dcc1fe09_patch_vllm_all_py.html  (+931 more)
docs/coverage/20260315/: status.json
docs/static/coverage/20260326/: class_index.html  function_index.html  index.html  z_029a114bb7d0be98___init___py.html  z_061df123ec123988___init___py.html  z_061df123ec123988_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0___init___py.html  z_0957b741f6c1fbf0_apply_repetition_penalties_py.html  z_0957b741f6c1fbf0_bincount_py.html  z_0957b741f6c1fbf0_concat_and_cache_mla_py.html  z_0957b741f6c1fbf0_cross_entropy_loss_py.html  z_0957b741f6c1fbf0_cutlass_scaled_mm_py.html  z_0957b741f6c1fbf0_flash_mla_py.html  z_0957b741f6c1fbf0_fused_add_rms_norm_py.html  z_0957b741f6c1fbf0_fused_moe_py.html  z_0957b741f6c1fbf0_geglu_py.html  z_0957b741f6c1fbf0_gelu_and_mul_py.html  z_0957b741f6c1fbf0_grouped_topk_py.html  (+983 more)
src/flag_gems/: __init__.py  backends.yaml
src/flag_gems/experimental_ops/: addcdiv.py  xlogy.py
src/flag_gems/ops/: __init__.py  get_scheduler_metadata.py  im2col.py  sigmoid.py
src/flag_gems/patches/: patch_util.py  patch_vllm_all.py
src/flag_gems/runtime/: common.py  configs_loader.py  flagtune.py
tests/: test_binary_pointwise_ops.py  test_get_scheduler_metadata.py  test_im2col.py  test_mm.py  test_nanmedian.py  test_normal.py  test_sigmoid.py  test_weight_norm_interface.py
tools/: env.sh  gpu_check_iluvatar.sh  parse_test_config.py  run_backend_tests.sh  run_tests.py  setup_vendor.sh  test-op.sh
(+2114 files in other folders)
