[build-system]
requires = ["setuptools>=64.0", "scikit-build-core>=0.11", "pybind11>=3.0.1", "uv>=0.9.26"]
build-backend = "scikit_build_core.build"

[project]
name = "flag_gems"
version = "4.2.1.rc.0"
description = "FlagGems is a function library written in Triton."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10.0"
license = { text = "Apache Software License" }
authors = [
    { name = "Zhixin Li", email = "strongspoon@outlook.com" },
    { name = "Tongxin Bai", email = "waffle.bai@gmail.com" },
    { name = "Yuming Huang", email = "jokmingwong@gmail.com" },
    { name = "Feiyu Chen", email = "iclementine@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy>=1.24",  # BSD-3-Clause. Used by backends, tests and utils
    "packaging>=25.0",  # Apache-2.0. used for packaging and version determination
    "PyYAML>=6.0.3",  # MIT. aka. 'yaml', used for benchmark, backend and runtime.
    "SQLAlchemy>=2.0.45",  # MIT. aka. 'sqlalchemy', used in core
    "torch>=2.2.0",  # BSD-3-Clause. Core dependency
    "triton>=3.1",  # MIT. core dependency
    "typing_extensions>=4.15.0",  # PSF-2.0. core model dependency
]

[project.urls]
Homepage = "https://github.com/flagos-ai/FlagGems"

[project.optional-dependencies]

inference = [
    "vllm>=0.13.0",  # Apache-2.0. Optional dependency for inference scenario.
]

benchmark = [
    "aiohttp>=3.13.3",  # Apache-2.0 and MIT. Models benchmark. 
    "datasets>=4.4.2",  # Apache-2.0. Models benchmark. 
    "flash_atten>=2.8.3",  # BSD-3-Clause. Attention benchmark.
    "huggingface_hub>=1.2.3",  # Apache-2.0. Models benchmark.
    "librosa>=0.11.0",  # ISCL. Models benchmark.
    "modelscope>=1.33.0",  # Apache-2.0. Models benchmark. 
    "pandas>=2.3.3",  # BSD-3-Clause. Models benchmark.
    "Pillow>=12.1.0",  # MIT-CMU. aka, 'PIL', models benchmark.
    "soundfile>=0.13.1",  # BSD-3-Clause. Models benchmark.
    "tqdm>=4.67.1",  # MIT. Models benchmark.
    "transformer-engine>=2.11.0",  # Apache-2.0. aka. 'transformer_engine'.
    "transformers>=4.57.3",  # Apache-2.0.
    "uvloop>=1.22.0",  # MIT.
]

ascend_backend = [
    "torch_npu>=2.8.0",  # BSD. Used by Ascend backend
 ]

flagtree_ascend = [
    "flagtree==0.3.0rc1+ascend3.2",
]

flagtree_enflame = [
    "flagtree==0.3.0rc1+enflame3.3",
]

flagtree_hcu = [
    "flagtree==0.3.0rc1+hcu3.0",
]

flagtree_iluvatar = [
    "flagtree==0.3.0rc1+iluvatar3.1",
]

flagtree_mthreads = [
    "flagtree==0.3.0rc1+mthreads3.1",
]

flagtree_nvidia = [
    "flagtree==0.3.0rc1+3.3",
]

flagtree_xpu = [
    "flagtree==0.3.0rc1+xpu3.0",
]

test = [
    "PyGithub>=2.8.1",  # LGPL. aka. 'github', used for coverage test, to be removed,
    "pytest>=8.4.2",  # MIT.
    "scipy>=1.14", # BSD-3-Clause. used in ks tests and distribution tests.
    "tilelang==0.1.7.post2",  # MIT. used in DSA tests.
    "transformer_engine>=2.11.0",  # Apache-2.0.
    "transformers>=4.57.3",  # Apache-2.0.
]

example = [
    "Pillow>=12.1.0",  # MIT-CMU. aka, 'PIL', 
    "requests>=2.32.5",  # Apache-2.0.
    "transformers>=4.57.3",  # Apache-2.0.
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"flag_gems.runtime" = ["*/**/*.yaml"]

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.install-dir = "flag-gems"
build-dir = "build/{cache_tag}"

[[tool.uv.index]]
# custom index for installing flagtree
name = "flagos-pypi"
url = "https://resource.flagos.net/repository/flagos-pypi-hosted/simple"
# Only use this index when explicitly specified
explicit = true
priority = "explicit"

[tool.uv.sources]
# This section directs the optional dependencies on FlagTree (flagtree)
# to the private Pypi index.
flagtree = { index = "flagos-pypi" }
